<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    tools:context=".activities.SignupActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="24sp"
        android:id="@+id/intro_txt"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        android:id="@+id/firstnameEditTextId"
        android:background="@drawable/editbg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/intro_txt"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:id="@+id/lastnameEditTextId"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="20dp"
        android:background="@drawable/editbg"
        app:layout_constraintTop_toBottomOf="@+id/firstnameEditTextId"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/passwordEditTextId"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="20dp"
        android:background="@drawable/editbg"
        app:layout_constraintTop_toBottomOf="@+id/lastnameEditTextId"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextId"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:id="@+id/signupButtonId"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/btn"
        android:text="@string/sign_up"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text_in"
        android:id="@+id/login_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupButtonId"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        android:textColor="@color/black"/>

</android.support.constraint.ConstraintLayout>