<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout tools:context=".activities.LoginActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayoutId"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey_thanks_for_coming_back"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="24sp"
        android:id="@+id/intro_txt"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:id="@+id/usernameEditTextId"
        android:background="@drawable/editbg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/intro_txt"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/passwordEditTextId"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="20dp"
        android:background="@drawable/editbg"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTextId"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextId"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:id="@+id/loginButtonId"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/btn"
        android:text="@string/login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:id="@+id/sign_up_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButtonId"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        android:textColor="@color/black"/>

</android.support.constraint.ConstraintLayout>